[gd_scene load_steps=2 format=3 uid="uid://vge8ty2l3sh8"]

[ext_resource type="Script" path="res://scripts/ui/health_changed_manager.gd" id="1_ecken"]

[node name="HealthChangeManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecken")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HealthBarPosition" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/HealthBarPosition"]
modulate = Color(0.00748273, 0.296203, 0.094221, 1)
texture_filter = 1
layout_mode = 2
offset_right = 40.0
offset_bottom = 4.0
size_flags_vertical = 1
max_value = 10.0
step = 1.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HealthBarPosition"]
layout_mode = 2
offset_right = 1136.0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
